Opened 10 years ago
Closed 10 years ago
#5430 closed defect (fixed)
ffmpeg git master compile error on libnut.c
| Reported by: | bermond | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | build system |
| Version: | git-master | Keywords: | libnut |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | yes |
Description
I'm getting the following compile error on libnut.c when trying to compile ffmpeg git master:
CC libavformat/libnut.o
libavformat/libnut.c: In function ‘nut_write_header’:
libavformat/libnut.c:97:34: error: ‘codec’ undeclared (first use in this function)
ff_parse_specific_params(codec, &num, &ssize, &denom);
^
libavformat/libnut.c:97:34: note: each undeclared identifier is reported only once for each function it appears in
libavformat/libnut.c: In function ‘nut_read_header’:
libavformat/libnut.c:197:21: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
.seek = av_seek,
^
libavformat/libnut.c:197:21: note: (near initialization for ‘dopts.input.seek’)
common.mak:60: recipe for target 'libavformat/libnut.o' failed
make: *** [libavformat/libnut.o] Error 1
Platform: linux x86_64.
Using libnut git master cloned from git://git.ffmpeg.org/nut.git and installed in its standard path.
ffmpeg git was compiling well until a few days ago, like 2 days. I'm not sure but it seems to be caused by ffmpeg git commit 6f69f7a8bf6a0d013985578df2ef42ee6b1c7994.
How to reproduce:
$ git clone git://source.ffmpeg.org/ffmpeg.git ffmpeg-full-git Cloning into 'ffmpeg-full-git'... remote: Counting objects: 470521, done. remote: Compressing objects: 100% (99055/99055), done. remote: Total 470521 (delta 375914), reused 464293 (delta 370615) Receiving objects: 100% (470521/470521), 77.95 MiB | 382.00 KiB/s, done. Resolving deltas: 100% (375914/375914), done. Checking connectivity... done. $ cd ffmpeg-full-git $ ./configure \ --prefix=/usr \ --extra-cflags="-I/opt/x265-hg/include \ -I/usr/include/nvidia-sdk \ -I/opt/cuda/include \ -I/usr/lib/jvm/java-8-openjdk/include \ -I/usr/lib/jvm/java-8-openjdk/include/linux" \ --extra-ldflags="-L/opt/x265-hg/lib -L/opt/cuda/lib64 -Wl,-rpath -Wl,/opt/x265-hg/lib:/opt/intel/mediasdk/lib64" \ \ --cpu=native \ \ --enable-rpath \ --enable-gpl \ --enable-version3 \ --enable-nonfree \ --enable-gray \ --disable-static \ --enable-shared \ --enable-avresample \ --enable-videotoolbox \ \ --enable-avisynth \ --enable-cuda \ --enable-chromaprint \ --enable-fontconfig \ --enable-frei0r \ --enable-gcrypt \ --enable-gmp \ --enable-gnutls \ --enable-jni \ --enable-ladspa \ --enable-libass \ --enable-libbluray \ --enable-libbs2b \ --enable-libcaca \ --enable-libcelt \ --enable-libcdio \ --enable-libdc1394 \ --enable-libfaac \ --enable-libfdk-aac \ --enable-libflite \ --enable-libfreetype \ --enable-libfribidi \ --enable-libgme \ --enable-libgsm \ --enable-libiec61883 \ --enable-libilbc \ --enable-libkvazaar \ --enable-libmfx \ --enable-libmodplug \ --enable-libmp3lame \ --enable-libnut \ --enable-libopencore-amrnb \ --enable-libopencore-amrwb \ --enable-libopencv \ --enable-libopenh264 \ --enable-libopenjpeg \ --enable-libopus \ --enable-libpulse \ --enable-librubberband \ --enable-librtmp \ --enable-libschroedinger \ --enable-libshine \ --enable-libsmbclient \ --enable-libsnappy \ --enable-libsoxr \ --enable-libspeex \ --enable-libssh \ --enable-libtesseract \ --enable-libtheora \ --enable-libtwolame \ --enable-libutvideo \ --enable-libv4l2 \ --enable-libvidstab \ --enable-libvo-amrwbenc \ --enable-libvorbis \ --enable-libvpx \ --enable-libwavpack \ --enable-libwebp \ --enable-libx264 \ --enable-libx265 \ --enable-libxavs \ --enable-libxcb \ --enable-libxcb-shm \ --enable-libxcb-xfixes \ --enable-libxcb-shape \ --enable-libxvid \ --enable-libzimg \ --enable-libzmq \ --enable-libzvbi \ --enable-decklink \ --enable-mediacodec \ --enable-netcdf \ --enable-nvenc \ --enable-openal \ --enable-opencl \ --enable-opengl \ --enable-openssl \ --enable-x11grab install prefix /usr source path . C compiler gcc C library glibc ARCH x86 (native) big-endian no runtime cpu detection yes yasm yes MMX enabled yes MMXEXT enabled yes 3DNow! enabled yes 3DNow! extended enabled yes SSE enabled yes SSSE3 enabled yes AESNI enabled yes AVX enabled yes XOP enabled yes FMA3 enabled yes FMA4 enabled yes i686 features enabled yes CMOV is fast yes EBX available yes EBP available yes debug symbols yes strip symbols yes optimize for size no optimizations yes static no shared yes postprocessing support yes new filter support yes network support yes threading support pthreads safe bitstream reader yes SDL support yes opencl enabled yes JNI support yes texi2html enabled no perl enabled yes pod2man enabled yes makeinfo enabled yes makeinfo supports HTML yes Enabled programs: ffmpeg ffplay ffprobe ffserver External libraries: avisynth libbs2b libilbc librubberband libvo_amrwbenc libzmq bzlib libcaca libkvazaar libschroedinger libvorbis libzvbi chromaprint libcdio libmfx libshine libvpx lzma cuda libcelt libmodplug libsmbclient libwavpack mediacodec decklink libdc1394 libmp3lame libsnappy libwebp netcdf frei0r libfaac libnut libsoxr libx264 nvenc gcrypt libfdk_aac libopencore_amrnb libspeex libx265 openal gmp libflite libopencore_amrwb libssh libxavs opencl gnutls libfontconfig libopencv libtesseract libxcb opengl iconv libfreetype libopenh264 libtheora libxcb_shape openssl jni libfribidi libopenjpeg libtwolame libxcb_shm sdl ladspa libgme libopus libutvideo libxcb_xfixes xlib libass libgsm libpulse libv4l2 libxvid zlib libbluray libiec61883 librtmp libvidstab libzimg Libraries: avcodec avfilter avresample postproc swresample swscale avdevice avformat avutil Enabled decoders: aac avrp flashsv mdec pcm_s24be srt aac_fixed avs flashsv2 metasound pcm_s24daud ssa aac_latm avui flic microdvd pcm_s24le stl aasc ayuv flv mimic pcm_s24le_planar subrip ac3 bethsoftvid fourxm mjpeg pcm_s32be subviewer ac3_fixed bfi fraps mjpegb pcm_s32le subviewer1 adpcm_4xm bink frwu mlp pcm_s32le_planar sunrast adpcm_adx binkaudio_dct g2m mmvideo pcm_s8 svq1 adpcm_afc binkaudio_rdft g723_1 motionpixels pcm_s8_planar svq3 adpcm_aica bintext g729 movtext pcm_u16be tak adpcm_ct bmp gif mp1 pcm_u16le targa adpcm_dtk bmv_audio gsm mp1float pcm_u24be targa_y216 adpcm_ea bmv_video gsm_ms mp2 pcm_u24le tdsc adpcm_ea_maxis_xa brender_pix h261 mp2float pcm_u32be text adpcm_ea_r1 c93 h263 mp3 pcm_u32le theora adpcm_ea_r2 cavs h263i mp3adu pcm_u8 thp adpcm_ea_r3 ccaption h263p mp3adufloat pcm_zork tiertexseqvideo adpcm_ea_xas cdgraphics h264 mp3float pcx tiff adpcm_g722 cdxl h264_mediacodec mp3on4 pgm tmv adpcm_g726 cfhd h264_qsv mp3on4float pgmyuv truehd adpcm_g726le cinepak h264_vdpau mpc7 pgssub truemotion1 adpcm_ima_amv cljr hap mpc8 pictor truemotion2 adpcm_ima_apc cllc hevc mpeg1_vdpau pjs truespeech adpcm_ima_dat4 comfortnoise hevc_qsv mpeg1video png tscc adpcm_ima_dk3 cook hnm4_video mpeg2_qsv ppm tscc2 adpcm_ima_dk4 cpia hq_hqa mpeg2video prores tta adpcm_ima_ea_eacs cscd hqx mpeg4 prores_lgpl twinvq adpcm_ima_ea_sead cyuv huffyuv mpeg4_vdpau ptx txd adpcm_ima_iss dca iac mpeg_vdpau qcelp ulti adpcm_ima_oki dds idcin mpeg_xvmc qdm2 utvideo adpcm_ima_qt dfa idf mpegvideo qdraw v210 adpcm_ima_rad dirac iff_ilbm mpl2 qpeg v210x adpcm_ima_smjpeg dnxhd imc msa1 qtrle v308 adpcm_ima_wav dpx indeo2 msmpeg4v1 r10k v408 adpcm_ima_ws dsd_lsbf indeo3 msmpeg4v2 r210 v410 adpcm_ms dsd_lsbf_planar indeo4 msmpeg4v3 ra_144 vb adpcm_psx dsd_msbf indeo5 msrle ra_288 vble adpcm_sbpro_2 dsd_msbf_planar interplay_acm mss1 ralf vc1 adpcm_sbpro_3 dsicinaudio interplay_dpcm mss2 rawvideo vc1_qsv adpcm_sbpro_4 dsicinvideo interplay_video msvideo1 realtext vc1_vdpau adpcm_swf dss_sp jacosub mszh rl2 vc1image adpcm_thp dvaudio jpeg2000 mts2 roq vcr1 adpcm_thp_le dvbsub jpegls mvc1 roq_dpcm vmdaudio adpcm_vima dvdsub jv mvc2 rpza vmdvideo adpcm_xa dvvideo kgv1 mxpeg rscc vmnc adpcm_yamaha dxa kmvc nellymoser rv10 vorbis aic dxtory lagarith nuv rv20 vp3 alac dxv libcelt on2avc rv30 vp5 alias_pix eac3 libfdk_aac opus rv40 vp6 als eacmv libgsm paf_audio s302m vp6a amrnb eamad libgsm_ms paf_video sami vp6f amrwb eatgq libilbc pam sanm vp7 amv eatgv libopencore_amrnb pbm screenpresso vp8 anm eatqi libopencore_amrwb pcm_alaw sdx2_dpcm vp9 ansi eightbps libopenjpeg pcm_bluray sgi vplayer ape eightsvx_exp libopus pcm_dvd sgirle vqa apng eightsvx_fib libschroedinger pcm_f32be shorten wavpack ass escape124 libspeex pcm_f32le sipr webp asv1 escape130 libutvideo pcm_f64be smackaud webvtt asv2 evrc libvorbis pcm_f64le smacker wmalossless atrac1 exr libvpx_vp8 pcm_lxf smc wmapro atrac3 ffv1 libvpx_vp9 pcm_mulaw smvjpeg wmav1 atrac3p ffvhuff libzvbi_teletext pcm_s16be snow wmav2 aura ffwavesynth loco pcm_s16be_planar sol_dpcm wmavoice aura2 fic mace3 pcm_s16le sonic wmv1 avrn flac mace6 pcm_s16le_planar sp5x wmv2 wmv3 ws_snd1 xbin xma1 y41p zerocodec wmv3_vdpau xan_dpcm xbm xma2 yop zlib wmv3image xan_wc3 xface xsub yuv4 zmbv wnv1 xan_wc4 xl xwd zero12v Enabled encoders: a64multi dvbsub libopenjpeg msmpeg4v3 pcm_u24be subrip a64multi5 dvdsub libopus msvideo1 pcm_u24le sunrast aac dvvideo libschroedinger nellymoser pcm_u32be svq1 ac3 eac3 libshine nvenc pcm_u32le targa ac3_fixed ffv1 libspeex nvenc_h264 pcm_u8 text adpcm_adx ffvhuff libtheora nvenc_hevc pcx tiff adpcm_g722 flac libtwolame pam pgm tta adpcm_g726 flashsv libutvideo pbm pgmyuv utvideo adpcm_ima_qt flashsv2 libvo_amrwbenc pcm_alaw png v210 adpcm_ima_wav flv libvorbis pcm_f32be ppm v308 adpcm_ms g723_1 libvpx_vp8 pcm_f32le prores v408 adpcm_swf gif libvpx_vp9 pcm_f64be prores_aw v410 adpcm_yamaha h261 libwavpack pcm_f64le prores_ks vc2 alac h263 libwebp pcm_mulaw qtrle vorbis alias_pix h263p libwebp_anim pcm_s16be r10k wavpack amv h264_qsv libx264 pcm_s16be_planar r210 webvtt apng hap libx264rgb pcm_s16le ra_144 wmav1 ass hevc_qsv libx265 pcm_s16le_planar rawvideo wmav2 asv1 huffyuv libxavs pcm_s24be roq wmv1 asv2 jpeg2000 libxvid pcm_s24daud roq_dpcm wmv2 avrp jpegls ljpeg pcm_s24le rv10 wrapped_avframe avui libfaac mjpeg pcm_s24le_planar rv20 xbm ayuv libfdk_aac movtext pcm_s32be s302m xface bmp libgsm mp2 pcm_s32le sgi xsub cinepak libgsm_ms mp2fixed pcm_s32le_planar snow xwd cljr libilbc mpeg1video pcm_s8 sonic y41p comfortnoise libkvazaar mpeg2_qsv pcm_s8_planar sonic_ls yuv4 dca libmp3lame mpeg2video pcm_u16be srt zlib dnxhd libopencore_amrnb mpeg4 pcm_u16le ssa zmbv dpx libopenh264 msmpeg4v2 Enabled hwaccels: h263_vaapi hevc_qsv mpeg1_xvmc mpeg2_xvmc vc1_qsv vp9_vaapi h264_qsv hevc_vaapi mpeg2_qsv mpeg4_vaapi vc1_vaapi wmv3_vaapi h264_vaapi hevc_vdpau mpeg2_vaapi mpeg4_vdpau vc1_vdpau wmv3_vdpau h264_vdpau mpeg1_vdpau mpeg2_vdpau Enabled parsers: aac dca dvdsub h264 mpegvideo tak aac_latm dirac flac hevc opus vc1 ac3 dnxhd g729 mjpeg png vorbis adx dpx gsm mlp pnm vp3 bmp dvaudio h261 mpeg4video rv30 vp8 cavsvideo dvbsub h263 mpegaudio rv40 vp9 cook dvd_nav Enabled demuxers: aa data iff mlp pcm_u16be subviewer1 aac daud ilbc mlv pcm_u16le sup ac3 dcstr image2 mm pcm_u24be svag acm dfa image2_alias_pix mmf pcm_u24le swf act dirac image2_brender_pix mov pcm_u32be tak adf dnxhd image2pipe mp3 pcm_u32le tedcaptions adp dsf image_bmp_pipe mpc pcm_u8 thp ads dsicin image_dds_pipe mpc8 pjs threedostr adx dss image_dpx_pipe mpegps pmp tiertexseq aea dts image_exr_pipe mpegts pva tmv afc dtshd image_j2k_pipe mpegtsraw pvf truehd aiff dv image_jpeg_pipe mpegvideo qcp tta aix dvbsub image_jpegls_pipe mpjpeg r3d tty amr dvbtxt image_pcx_pipe mpl2 rawvideo txd anm dxa image_pictor_pipe mpsub realtext v210 apc ea image_png_pipe msf redspark v210x ape ea_cdata image_qdraw_pipe msnwc_tcp rl2 vag apng eac3 image_sgi_pipe mtv rm vc1 aqtitle epaf image_sunrast_pipe musx roq vc1t asf ffm image_tiff_pipe mv rpl vivo asf_o ffmetadata image_webp_pipe mvi rsd vmd ass filmstrip ingenient mxf rso vobsub ast flac ipmovie mxg rtp voc au flic ircam nc rtsp vpk avi flv iss nistsphere sami vplayer avisynth fourxm iv8 nsv sap vqf avr frm ivf nut sbg w64 avs fsb ivr nuv sdp wav bethsoftvid g722 jacosub ogg sdr2 wc3 bfi g723_1 jv oma segafilm webm_dash_manifest bfstm g729 libgme paf shorten webvtt bink genh libmodplug pcm_alaw siff wsaud bintext gif libnut pcm_f32be sln wsvqa bit gsm live_flv pcm_f32le smacker wtv bmv gxf lmlm4 pcm_f64be smjpeg wv boa h261 loas pcm_f64le smush wve brstm h263 lrc pcm_mulaw sol xa c93 h264 lvf pcm_s16be sox xbin caf hevc lxf pcm_s16le spdif xmv cavsvideo hls m4v pcm_s24be srt xvag cdg hnm matroska pcm_s24le stl xwma cdxl ico mgsts pcm_s32be str yop cine idcin microdvd pcm_s32le subviewer yuv4mpegpipe concat idf mjpeg pcm_s8 Enabled muxers: a64 dv ipod mpeg2dvd pcm_s24le sox ac3 eac3 ircam mpeg2svcd pcm_s32be spdif adts f4v ismv mpeg2video pcm_s32le spx adx ffm ivf mpeg2vob pcm_s8 srt aiff ffmetadata jacosub mpegts pcm_u16be stream_segment amr filmstrip latm mpjpeg pcm_u16le swf apng flac libnut mxf pcm_u24be tee asf flv lrc mxf_d10 pcm_u24le tg2 asf_stream framecrc m4v mxf_opatom pcm_u32be tgp ass framemd5 matroska null pcm_u32le truehd ast g722 matroska_audio nut pcm_u8 uncodedframecrc au g723_1 md5 oga psp vc1 avi gif microdvd ogg rawvideo vc1t avm2 gsm mjpeg oma rm voc bit gxf mkvtimestamp_v2 opus roq w64 caf h261 mlp pcm_alaw rso wav cavsvideo h263 mmf pcm_f32be rtp webm chromaprint h264 mov pcm_f32le rtp_mpegts webm_chunk crc hds mp2 pcm_f64be rtsp webm_dash_manifest dash hevc mp3 pcm_f64le sap webp data hls mp4 pcm_mulaw segment webvtt daud ico mpeg1system pcm_s16be singlejpeg wtv dirac ilbc mpeg1vcd pcm_s16le smjpeg wv dnxhd image2 mpeg1video pcm_s24be smoothstreaming yuv4mpegpipe dts image2pipe Enabled protocols: async file https librtmpte mmst tcp bluray ftp icecast libsmbclient pipe tls_gnutls cache gopher librtmp libssh rtp udp concat hls librtmpe md5 srtp udplite crypto http librtmps mmsh subfile unix data httpproxy librtmpt Enabled filters: abench ass decimate histogram phase sine acompressor astats deflate hqdn3d pixdesctest smartblur acrossfade astreamselect dejudder hqx pp smptebars adelay asyncts delogo hstack pp7 smptehdbars adrawgraph atadenoise deshake hue psnr sofalizer aecho atempo detelecine hwupload_cuda pullup spectrumsynth aemphasis atrim dilation idet qp split aeval avectorscope displace il random spp aevalsrc azmq drawbox inflate realtime ssim afade bandpass drawgraph interlace remap stereo3d afftfilt bandreject drawgrid interleave removegrain stereotools aformat bass drawtext join removelogo stereowiden agate bbox dynaudnorm kerndeint repeatfields streamselect ahistogram bench earwax ladspa replaygain subtitles ainterleave biquad ebur128 lenscorrection resample super2xsai alimiter blackdetect edgedetect life reverse swaprect allpass blackframe elbg loop rgbtestsrc swapuv allrgb blend eq lowpass rotate tblend allyuv boxblur equalizer lut rubberband telecine aloop bs2b erosion lut3d sab testsrc alphaextract bwdif extractplanes lutrgb scale testsrc2 alphamerge cellauto extrastereo lutyuv scale2ref thumbnail amerge channelmap fade mandelbrot select tile ametadata channelsplit fftfilt maskedmerge selectivecolor tinterlace amix chorus field mcdeint sendcmd transpose amovie chromakey fieldhint mergeplanes separatefields treble anequalizer ciescope fieldmatch metadata setdar tremolo anoisesrc codecview fieldorder movie setfield trim anull color find_rect mpdecimate setpts unsharp anullsink colorbalance firequalizer mptestsrc setsar uspp anullsrc colorchannelmixer flanger negate settb vectorscope apad colorkey flite nnedi showcqt vflip aperms colorlevels format noformat showfreqs vibrato aphasemeter colormatrix fps noise showinfo vidstabdetect aphaser compand framepack null showpalette vidstabtransform apulsator compensationdelay framerate nullsink showspectrum vignette arealtime concat framestep nullsrc showspectrumpic volume aresample convolution frei0r ocr showvolume volumedetect areverse copy frei0r_src ocv showwaves vstack aselect cover_rect fspp overlay showwavespic w3fdif asendcmd crop geq owdenoise shuffleframes waveform asetnsamples cropdetect gradfun pad shuffleplanes xbr asetpts curves haldclut palettegen sidechaincompress yadif asetrate datascope haldclutsrc paletteuse sidechaingate zmq asettb dcshift hflip pan signalstats zoompan ashowinfo dctdnoiz highpass perms silencedetect zscale asplit deband histeq perspective silenceremove Enabled bsfs: aac_adtstoasc dump_extradata imx_dump_header mov2textsub noise text2movsub chomp h264_mp4toannexb mjpeg2jpeg mp3_header_decompress remove_extradata vp9_superframe dca_core hevc_mp4toannexb mjpega_dump_header mpeg4_unpack_bframes Enabled indevs: alsa fbdev lavfi libdc1394 oss v4l2 decklink iec61883 libcdio openal pulse x11grab_xcb dv1394 jack Enabled outdevs: alsa decklink opengl pulse v4l2 xv caca fbdev oss sdl License: nonfree and unredistributable Creating config.mak, config.h, and doc/config.texi... $ make
Thank you.
Change History (9)
follow-up: 5 comment:1 by , 10 years ago
comment:3 by , 10 years ago
for the time being. i add AVCodecContext *codec; to libnut.c
static int nut_write_header(AVFormatContext * avf) {
NUTContext * priv = avf->priv_data;
AVIOContext * bc = avf->pb;
++ AVCodecContext *codec;
nut_muxer_opts_tt mopts = {
follow-up: 6 comment:4 by , 10 years ago
My fault, I will fix it (once I figure out where to even get libnut... google provides links to random forks).
comment:5 by , 10 years ago
Replying to kuh3h3:
confirmed here on fedora 23(x86-64).maybe nobody use libnut?
That was my feeling after more than 10 days without anyone noticing this simple error. :)
Thanks for confirming it.
comment:6 by , 10 years ago
Replying to dbuitenh:
My fault, I will fix it (once I figure out where to even get libnut... google provides links to random forks).
I use libnut from git clone URL git://git.ffmpeg.org/nut.git.
It seems to be the official source.
follow-up: 8 comment:7 by , 10 years ago
comment:9 by , 10 years ago
| Analyzed by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |



confirmed here on fedora 23(x86-64).maybe nobody use libnut?
CC libavformat/libnut.o
src/libavformat/libnut.c: In function 'nut_write_header':
src/libavformat/libnut.c:97:34: error: 'codec' undeclared (first use in this function)
src/libavformat/libnut.c:97:34: note: each undeclared identifier is reported only once for each function it appears in
src/libavformat/libnut.c: In function 'nut_read_header':
src/libavformat/libnut.c:197:21: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
src/libavformat/libnut.c:197:21: note: (near initialization for 'dopts.input.seek')
/run/media/reandr/48fed7c3-c2ce-49e5-8eaa-3bdf47cff596/reandr/mpv-build/ffmpeg/common.mak:60: recipe for target 'libavformat/libnut.o' failed
make: * [libavformat/libnut.o] Error 1