libnut: Pass stream to ff_parse_specific_params

This function bo longer takes an AVCodecContext.

Fixes ticket #5430.

Signed-off-by: Derek Buitenhuis <derek.buitenhuis@gmail.com>